--- a/src/app/modules/test-page/pages/test-navigation/test-navigation.component.html
+++ b/src/app/modules/test-page/pages/test-navigation/test-navigation.component.html
@@ -7,3 +7,5 @@
 <a [routerLink]="'data-passing'">Взаимодействие компонентов</a>
 <br>
 <a [routerLink]="'dynamic-components'">Динамические компоненты</a>
+<br>
+<a [routerLink]="'templates'">Шаблоны</a>
