--- a/src/app/modules/test-page/pages/test-navigation/test-navigation.component.html
+++ b/src/app/modules/test-page/pages/test-navigation/test-navigation.component.html
@@ -9,3 +9,5 @@
 <a [routerLink]="'dynamic-components'">Динамические компоненты</a>
 <br>
 <a [routerLink]="'templates'">Шаблоны</a>
+<br>
+<a [routerLink]="'directives'">Директивы</a>
