--- a/src/app/modules/test-page/pages/directives/test-component-directive/test-component-directive.component.html
+++ b/src/app/modules/test-page/pages/directives/test-component-directive/test-component-directive.component.html
@@ -3,3 +3,9 @@
     appDirective
     [stylesToModify]="styles"
 >Тут директива аттрибутная</div>
+
+<br>
+<br>
+<br>
+
+<div app-component-directive-structual></div>
