--- a/src/app/modules/test-page/pages/test-navigation/test-navigation.component.html
+++ b/src/app/modules/test-page/pages/test-navigation/test-navigation.component.html
@@ -11,3 +11,5 @@
 <a [routerLink]="'templates'">Шаблоны</a>
 <br>
 <a [routerLink]="'directives'">Директивы</a>
+<br>
+<a [routerLink]="'di'">Внедрение зависимостей</a>
