--- a/src/app/modules/posts/components/post-menu/post-menu.component.scss
+++ b/src/app/modules/posts/components/post-menu/post-menu.component.scss
@@ -10,6 +10,11 @@
 
         &__item {}
 
-        &__link {}
+        &__link {
+
+            &.active {
+                color: red;
+            }
+        }
     }
 }
