--- a/src/app/modules/posts/components/post/post.component.html
+++ b/src/app/modules/posts/components/post/post.component.html
@@ -1,4 +1,27 @@
-<div>
-    {{post.title}}
-    {{post.body}}
-</div>
+<ng-container *ngIf="isPostPage; else default">
+    <div class="{{class}}__body">
+        <ng-container [ngTemplateOutlet]="title"></ng-container>
+        <p class="{{class}}__text">{{post.body}}</p>
+        <ng-container [ngTemplateOutlet]="infoPost"></ng-container>
+    </div>
+</ng-container>
+
+<ng-template #default>
+    <div class="{{class}}__body">
+        <ng-container [ngTemplateOutlet]="title"></ng-container>
+        <ng-container [ngTemplateOutlet]="infoPost"></ng-container>
+        <a class="{{class}}__post-link" [routerLink]="['/posts/post', post.id]"></a>
+    </div>
+</ng-template>
+
+
+<ng-template #infoPost>
+    <div class="{{class}}__header">
+        <span class="{{class}}__number">Номер поста: {{post.id}}</span>
+        <a class="{{class}}__user" [routerLink]="['/posts/users', post.userId]">Автор: {{post.userId}}</a>
+    </div>
+</ng-template>
+
+<ng-template #title>
+    <h5 class="{{class}}__title">{{post.title}}</h5>
+</ng-template>
