--- a/src/app/modules/posts/components/users/users.component.html
+++ b/src/app/modules/posts/components/users/users.component.html
@@ -1,3 +1,8 @@
-<p>
-  users works!
-</p>
+<h1 class="{{class}}__title">Пользователи</h1>
+
+<div class="{{class}}__list">
+    <div app-user
+        *ngFor="let user of users"
+        [user]="user"
+    ></div>
+</div>
