--- a/src/app/modules/posts/components/post-menu/post-menu.component.html
+++ b/src/app/modules/posts/components/post-menu/post-menu.component.html
@@ -11,6 +11,7 @@
             <a class="{{class}}__link"
                 [routerLink]="['./users']"
                 [routerLinkActive]="'active'"
+                [routerLinkActiveOptions]="{exact: true}"
             >Пользователи</a>
         </li>
     </ul>
