--- a/src/app/modules/posts/components/post/post.component.scss
+++ b/src/app/modules/posts/components/post/post.component.scss
@@ -36,6 +36,13 @@
             width: 100%;
             height: 100%;
         }
+
+        &__form-button {
+            margin: 10px 0 0 0;
+            background-color: black;
+            color: white;
+            padding: 10px;
+        }
     }
 }
 
