--- a/src/app/modules/posts/components/comment/comment.component.html
+++ b/src/app/modules/posts/components/comment/comment.component.html
@@ -16,3 +16,11 @@
         [routerLink]="['/posts/comments', comment.id]"
     ></a>
 </ng-template>
+
+<form [formGroup]="form"
+    (ngSubmit)="onSubmit()"
+>
+    <input formControlName="name" type="text" placeholder="Имя">
+    <input formControlName="body" type="text" placeholder="Текст">
+    <button type="submit">Отправить</button>
+</form>
