--- a/src/app/modules/base/components/input/input.component.scss
+++ b/src/app/modules/base/components/input/input.component.scss
@@ -9,6 +9,10 @@
             margin: 10px 0 0 0;
             border: 1px solid black;
             padding: 5px 10px;
+
+            &.ng-invalid:not(.ng-untouched) {
+                border: 1px solid red;
+            }
         }
     }
 }
